--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
 /* global styles */
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Poppins&display=swap');
+.sharp-corners,
+.sharp-corners * {
+    border-radius: 0;
+}
 
 /* hero */
 
@@ -43,8 +47,32 @@ h2 {
     background-color: #dbdcde; /* light grey */
 }
 
+#portfolio .card-title {
+    color: #1f7798; /* mid-blue */
+    font-size: 1.2rem;
+}
+
+#portfolio .btn-outline-secondary:hover {
+    background-color: #1f7798;
+}
+
+#portfolio .card-text {
+    min-height: 120px;
+}
+
 /*contact */
 
 #contact {
     background-color: white;
 }
+
+/* media queries */
+
+/* use bootstrap breakpoints for xl screens */
+
+@media  screen and (min-width: 1200px) {
+    #portfolio .card-text {
+        min-height: auto;
+    }
+}
+
