--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@
     border-radius: 0;
 }
 
+.btn-primary:hover {
+    background-color:#1d6d8a;
+}
 /* hero */
 
 #hero {
@@ -23,6 +26,8 @@
     min-height: 500px;
     padding: 5% 7%;
 }
+
+
 
 body {
     font-family: "Poppins", sans-serif;
